force-app/main/default/objects/Vehicle__c/fields/Kilometer_Run__c.field-meta.xml
<CustomField>
    <fullName>Kilometer_Run__c</fullName>
    <label>Kilometer Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>