force-app/main/default/objects/Vehicle__c/fields/Max_Weight__c.field-meta.xml
<CustomField>
    <fullName>Max_Weight__c</fullName>
    <label>Max Weight(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>