force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eicher Pro 2049</fullName>
            </value>
            <value>
                <fullName>Eicher Pro 3015</fullName>
            </value>
            <value>
                <fullName>Eicher Pro 3019</fullName>
            </value>
            <value>
                <fullName>Eicher Pro 2110</fullName>
            </value>
            <value>
                <fullName>Eicher Pro 2059</fullName>
            </value>
            <value>
                <fullName>Eicher Pro 3018</fullName>
            </value>
            <value>
                <fullName>Eicher Pro 2095XP</fullName>
            </value>
            <value>
                <fullName>Tata Intra V10</fullName>
            </value>
            <value>
                <fullName>Tata 1512 LPT</fullName>
            </value>
            <value>
                <fullName>Tata 709g LPT</fullName>
            </value>
            <value>
                <fullName>Tata Signa 5530.S</fullName>
            </value>
            <value>
                <fullName>Tata Intra V20 Bi Fuel</fullName>
            </value>
            <value>
                <fullName>Ashok Leyland 5525-6x4</fullName>
            </value>
            <value>
                <fullName>Ashok Leyland Partner 4 Tyre</fullName>
            </value>
            <value>
                <fullName>Ashok Leyland Partner 6 Tyre</fullName>
            </value>
            <value>
                <fullName>BharatBenz 2823C</fullName>
            </value>
            <value>
                <fullName>BharatBenz 1917R</fullName>
            </value>
            <value>
                <fullName>BharatBenz 1217C</fullName>
            </value>
            <value>
                <fullName>BharatBenz 4828R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>