force-app/main/default/objects/Vehicle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avaliable</fullName>
                <default>true</default>
                <label>Avaliable</label>
            </value>
            <value>
                <fullName>On Trip</fullName>
            </value>
            <value>
                <fullName>On Return</fullName>
            </value>
            <value>
                <fullName>On Service</fullName>
            </value>
            <value>
                <fullName>Not In Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>